--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   },
   "type": "module",
   "author": "",
+  "start":"node index.js",
   "license": "ISC",
   "description": "",
   "dependencies": {
