--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,20 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
+    "go":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
-  "start":"node index.js",
+  
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.9.2",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "zod": "^3.24.1"
   }
