--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,16 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "go":"node index.js",
+    "go": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "type": "module",
   "author": "",
-  
   "license": "ISC",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
